* Remove getopt.h from the includes: it's only needed for getopt_long, which   isn't used here. * Add stdlib.h because Solaris has getopt there instead of unistd.h (which   sounds like the correct place to be, since getopt isn't part of ISO C). * Move sys/types.h to the top, just to be on the safe side.

BUG:118407

svn path=/trunk/extragear/libs/kipi-plugins/; revision=488831