rawconverter/dcrawprocess.cpp
@@ -25,12 +25,12 @@
 
 extern "C"
 {
+#include <sys/types.h>
 #include <stdio.h>
 #include <unistd.h>
-#include <sys/types.h>
+#include <stdlib.h>
 #include <sys/wait.h>
 #include <signal.h>
-#include <getopt.h>
 #include <jpeglib.h>
 #include <tiffio.h>
 }
